--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,20 @@
             "type": "java",
             "name": "Client",
             "request": "launch",
+            "mainClass": "observer.Client",
+            "projectName": "observer"
+        },
+        {
+            "type": "java",
+            "name": "Client",
+            "request": "launch",
+            "mainClass": "mediator.Client",
+            "projectName": "mediator"
+        },
+        {
+            "type": "java",
+            "name": "Client",
+            "request": "launch",
             "mainClass": "cor.Client",
             "projectName": "cor"
         },
